# tsmp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Readme.md  libclangcpp-config.cmake  tsmpConfig.cmake  vcpkg.json
.github/workflows/: cmake.yml  ctest_pipeline.yml  release.yml
cmake/: dependencyLoading.cmake  enable_reflection.cmake  libclangcpp-config.cmake  tsmpConfig.cmake
doc/: Changelog.md
examples/: CMakeLists.txt  enum.cpp  json.cpp  json_encode.cpp  pointer_dereference.cpp  proxy.cpp  simple.cpp  tracing.cpp
include/tsmp/: introspect.hpp  json.hpp  proxy.hpp  reflect.hpp  string_literal.hpp
package/arch/: PKGBUILD
scripts/: bump_version.sh  format.sh  release.sh
scripts/package/arch/: PKGBUILD
test/: CMakeLists.txt  introspect.cpp  json.cpp  proxy.cpp  reflect.cpp  reflect_without_linking.cpp  reflection_with_linking.cpp  reflection_with_linking_impl.cpp  reflection_without_external_linking.cpp  string_literal.cpp
test/tooling/: CMakeLists.txt  prefix_splitter.cpp
tooling/: CMakeLists.txt
tooling/data/: aggregator.cpp  aggregator.hpp  backport.hpp  enum_splitter.cpp  enum_splitter.hpp  prefix_splitter.cpp  prefix_splitter.hpp  renderer.cpp  renderer.hpp  types.cpp  types.hpp
tooling/engine/: ast_traversal_tool.cpp  ast_traversal_tool.hpp  code_generator.cpp  code_generator.hpp  consumer.cpp  consumer.hpp  frontendaction.cpp  frontendaction.hpp  introspect_visitor.cpp  introspect_visitor.hpp  utils.cpp  utils.h
